# ClaudeCodeLinuxGui

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  LICENSE.deb.txt  README.md  index.html  install-apparmor.sh  install.sh  main.js  package.json  preload.js  renderer.js  style.css  wmclass.sh
.github/: FUNDING.yml
assets/: dev.local.claude_code_linux_gui.desktop
assets/apparmor/: claude-code-linux-gui
pkg/: build-deb.sh
pkg/deb/: postinst  prerm
src/: main.rs
